// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview should lifecycle 1`] = `
.c4 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c1 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c1:hover {
  cursor: pointer;
}

.c1 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c1 > div svg {
  margin-right: 0.25rem;
}

.c1 > div {
  color: #4475E3;
}

.c1 > div svg {
  fill: #4475E3;
}

.c1:hover:enabled > div {
  color: #2F65E0;
}

.c1:hover:enabled > div svg {
  fill: #2F65E0;
}

.c1:hover:enabled:active > div {
  color: #2057D5;
}

.c1:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c1:disabled > div {
  color: #B3C6F1;
}

.c1:disabled > div svg {
  fill: #B3C6F1;
}

.c1:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c1:focus-visible > div {
  color: #4475E3;
}

.c1:focus-visible > div svg {
  fill: #4475E3;
}

.c3 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c7 {
  position: relative;
  width: 100%;
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
}

.c11 {
  grid-area: right-icon;
}

.c8 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c9:hover {
  border-color: #2F65E0;
}

.c18 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c20 {
  width: calc(100% * 0.3333333333333333);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
}

.c30 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c33 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c32 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c27 {
  display: inline-block;
}

.c27 input {
  display: none;
}

.c27 .c31 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
}

.c27 .c31 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c27:hover > .c29 {
  cursor: pointer;
}

.c27:hover .c31 svg > :first-child {
  fill: #ECF1FC;
}

.c28 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c28 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c28 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1.875rem;
}

.c24 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c25 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  height: 3.375rem;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c35:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c36 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c36:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c0 {
  min-width: 0rem;
  height: 100vh;
  padding: 3rem 0 6.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  background-color: #FFFFFF;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  opacity: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  grid-area: preview;
}

.c2 {
  margin-left: 1.5rem;
}

.c2 > div svg {
  margin-right: 0.25rem;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  margin-right: 1.125rem;
  white-space: nowrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.5rem 0 1.5rem;
  padding: 0 2.5rem;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  position: relative;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-height: 37.5rem;
  margin: 0 2.5rem;
  overflow: hidden;
}

.c13 {
  width: 22.5rem;
  height: 134%;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
}

.c14 {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 2rem 1.5rem 3.5rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.875rem;
}

.c15 svg {
  margin-right: 1rem;
}

.c16 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  left: 1.5rem;
  right: 1.5rem;
  bottom: 0;
  height: 4.6875rem;
  background: linear-gradient(180deg,rgba(255,255,255,0) 0%,#ffffff 50%);
}

<div
  class="c0"
  data-testid="survey-preview"
>
  <button
    class="c1 c2"
    data-testid="survey-preview-close"
    fill="text"
    style="overflow: hidden; position: relative;"
    width="164"
  >
    <div
      class="c3"
      data-testid="content"
    >
      <svg />
      Close Preview
    </div>
    <div
      class="c4"
      color="primaryLightPressed"
      opacity="1,1"
      scale="0"
      style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
    />
  </button>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      Switch to
    </div>
    <div
      class="c7"
    >
      <div
        class="c8 c9"
        data-testid="ValueItem"
      >
        <div
          class="c10"
        >
          Question 1
        </div>
        <svg
          class="c11"
        />
      </div>
    </div>
  </div>
  <div
    class="c12"
  >
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <div
          class="c15"
        >
          <svg />
          <div
            class="c16"
          >
            1 Survey placeholder for title maximum two lines
          </div>
        </div>
        <div
          class="c17"
          data-testid="survey-preview-screen"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              />
            </div>
            <div
              class="c21"
            >
              1 out of 3
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
            >
              <div
                class="c24"
              >
                Did you experience nausea today?*
              </div>
              <div
                class="c25"
              />
            </div>
            <div
              class="c26"
            >
              <div
                class="c27  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="9"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    Yes
                  </div>
                </label>
                <input
                  id="9"
                  type="checkbox"
                  value="0"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="10"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    No
                  </div>
                </label>
                <input
                  id="10"
                  type="checkbox"
                  value="1"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="11"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    I dont remember
                  </div>
                </label>
                <input
                  id="11"
                  type="checkbox"
                  value="2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c34"
      >
        <button
          class="c35"
          data-testid="survey-preview-prev"
          disabled=""
          width="75"
        >
          Previous
        </button>
        <button
          class="c36"
          data-testid="survey-preview-next"
          disabled=""
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview should lifecycle 2`] = `
.c4 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c1 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c1:hover {
  cursor: pointer;
}

.c1 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c1 > div svg {
  margin-right: 0.25rem;
}

.c1 > div {
  color: #4475E3;
}

.c1 > div svg {
  fill: #4475E3;
}

.c1:hover:enabled > div {
  color: #2F65E0;
}

.c1:hover:enabled > div svg {
  fill: #2F65E0;
}

.c1:hover:enabled:active > div {
  color: #2057D5;
}

.c1:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c1:disabled > div {
  color: #B3C6F1;
}

.c1:disabled > div svg {
  fill: #B3C6F1;
}

.c1:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c1:focus-visible > div {
  color: #4475E3;
}

.c1:focus-visible > div svg {
  fill: #4475E3;
}

.c3 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c7 {
  position: relative;
  width: 100%;
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
}

.c11 {
  grid-area: right-icon;
}

.c8 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c9:hover {
  border-color: #2F65E0;
}

.c18 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c20 {
  width: calc(100% * 0.3333333333333333);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
}

.c30 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c33 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c32 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c27 {
  display: inline-block;
}

.c27 input {
  display: none;
}

.c27 .c31 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
}

.c27 .c31 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c27:hover > .c29 {
  cursor: pointer;
}

.c27:hover .c31 svg > :first-child {
  fill: #ECF1FC;
}

.c28 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c28 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c28 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1.875rem;
}

.c24 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c25 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  height: 3.375rem;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c35:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c36 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c36:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c0 {
  min-width: 21.875rem;
  height: 100vh;
  padding: 3rem 0 6.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  background-color: #FFFFFF;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  opacity: 1;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  grid-area: preview;
}

.c2 {
  margin-left: 1.5rem;
}

.c2 > div svg {
  margin-right: 0.25rem;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  margin-right: 1.125rem;
  white-space: nowrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.5rem 0 1.5rem;
  padding: 0 2.5rem;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  position: relative;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-height: 37.5rem;
  margin: 0 2.5rem;
  overflow: hidden;
}

.c13 {
  width: 22.5rem;
  height: 134%;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
}

.c14 {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 2rem 1.5rem 3.5rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.875rem;
}

.c15 svg {
  margin-right: 1rem;
}

.c16 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  left: 1.5rem;
  right: 1.5rem;
  bottom: 0;
  height: 4.6875rem;
  background: linear-gradient(180deg,rgba(255,255,255,0) 0%,#ffffff 50%);
}

<div
  class="c0"
  data-testid="survey-preview"
>
  <button
    class="c1 c2"
    data-testid="survey-preview-close"
    fill="text"
    style="overflow: hidden; position: relative;"
    width="164"
  >
    <div
      class="c3"
      data-testid="content"
    >
      <svg />
      Close Preview
    </div>
    <div
      class="c4"
      color="primaryLightPressed"
      opacity="1,1"
      scale="0"
      style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
    />
  </button>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      Switch to
    </div>
    <div
      class="c7"
    >
      <div
        class="c8 c9"
        data-testid="ValueItem"
      >
        <div
          class="c10"
        >
          Question 1
        </div>
        <svg
          class="c11"
        />
      </div>
    </div>
  </div>
  <div
    class="c12"
  >
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <div
          class="c15"
        >
          <svg />
          <div
            class="c16"
          >
            1 Survey placeholder for title maximum two lines
          </div>
        </div>
        <div
          class="c17"
          data-testid="survey-preview-screen"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              />
            </div>
            <div
              class="c21"
            >
              1 out of 3
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
            >
              <div
                class="c24"
              >
                Did you experience nausea today?*
              </div>
              <div
                class="c25"
              />
            </div>
            <div
              class="c26"
            >
              <div
                class="c27  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="9"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    Yes
                  </div>
                </label>
                <input
                  id="9"
                  type="checkbox"
                  value="0"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="10"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    No
                  </div>
                </label>
                <input
                  id="10"
                  type="checkbox"
                  value="1"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="11"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    I dont remember
                  </div>
                </label>
                <input
                  id="11"
                  type="checkbox"
                  value="2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c34"
      >
        <button
          class="c35"
          data-testid="survey-preview-prev"
          disabled=""
          width="75"
        >
          Previous
        </button>
        <button
          class="c36"
          data-testid="survey-preview-next"
          disabled=""
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview should lifecycle 3`] = `
.c4 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c1 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c1:hover {
  cursor: pointer;
}

.c1 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c1 > div svg {
  margin-right: 0.25rem;
}

.c1 > div {
  color: #4475E3;
}

.c1 > div svg {
  fill: #4475E3;
}

.c1:hover:enabled > div {
  color: #2F65E0;
}

.c1:hover:enabled > div svg {
  fill: #2F65E0;
}

.c1:hover:enabled:active > div {
  color: #2057D5;
}

.c1:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c1:disabled > div {
  color: #B3C6F1;
}

.c1:disabled > div svg {
  fill: #B3C6F1;
}

.c1:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c1:focus-visible > div {
  color: #4475E3;
}

.c1:focus-visible > div svg {
  fill: #4475E3;
}

.c3 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c7 {
  position: relative;
  width: 100%;
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
}

.c11 {
  grid-area: right-icon;
}

.c8 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c9:hover {
  border-color: #2F65E0;
}

.c18 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c20 {
  width: calc(100% * 0.6666666666666666);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
}

.c30 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c32 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c33 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.59375rem;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
}

.c27 {
  display: inline-block;
}

.c27 input {
  display: none;
}

.c27 .c31 > svg > :nth-child(1) {
  -webkit-transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
  fill: #FFFFFF;
}

.c27:hover > .c29 {
  cursor: pointer;
}

.c27:hover .c31 > svg > :nth-child(1) {
  fill: #ECF1FC;
  stroke: #B3C6F1;
}

.c28 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c28 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c28 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1.875rem;
}

.c24 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c25 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  height: 3.375rem;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c35:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c36 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c36:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c0 {
  min-width: 21.875rem;
  height: 100vh;
  padding: 3rem 0 6.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  background-color: #FFFFFF;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  opacity: 1;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  grid-area: preview;
}

.c2 {
  margin-left: 1.5rem;
}

.c2 > div svg {
  margin-right: 0.25rem;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  margin-right: 1.125rem;
  white-space: nowrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.5rem 0 1.5rem;
  padding: 0 2.5rem;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  position: relative;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-height: 37.5rem;
  margin: 0 2.5rem;
  overflow: hidden;
}

.c13 {
  width: 22.5rem;
  height: 134%;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
}

.c14 {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 2rem 1.5rem 3.5rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.875rem;
}

.c15 svg {
  margin-right: 1rem;
}

.c16 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  left: 1.5rem;
  right: 1.5rem;
  bottom: 0;
  height: 4.6875rem;
  background: linear-gradient(180deg,rgba(255,255,255,0) 0%,#ffffff 50%);
}

<div
  class="c0"
  data-testid="survey-preview"
>
  <button
    class="c1 c2"
    data-testid="survey-preview-close"
    fill="text"
    style="overflow: hidden; position: relative;"
    width="164"
  >
    <div
      class="c3"
      data-testid="content"
    >
      <svg />
      Close Preview
    </div>
    <div
      class="c4"
      color="primaryLightPressed"
      opacity="1,1"
      scale="0"
      style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
    />
  </button>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      Switch to
    </div>
    <div
      class="c7"
    >
      <div
        class="c8 c9"
        data-testid="ValueItem"
      >
        <div
          class="c10"
        >
          Question 2
        </div>
        <svg
          class="c11"
        />
      </div>
    </div>
  </div>
  <div
    class="c12"
  >
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <div
          class="c15"
        >
          <svg />
          <div
            class="c16"
          >
            1 Survey placeholder for title maximum two lines
          </div>
        </div>
        <div
          class="c17"
          data-testid="survey-preview-screen"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              />
            </div>
            <div
              class="c21"
            >
              2 out of 3
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
            >
              <div
                class="c24"
              >
                Please select the symptoms you experienced today.*
              </div>
              <div
                class="c25"
              >
                Recall the feelings you had today.
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27 c28"
              >
                <label
                  class="c29 c30"
                  for="checkbox_13"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                    data-testid="checkbox-label"
                  >
                    Dizzy
                  </div>
                </label>
                <input
                  id="checkbox_13"
                  type="checkbox"
                  value="0"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27 c28"
              >
                <label
                  class="c29 c30"
                  for="checkbox_14"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                    data-testid="checkbox-label"
                  >
                    Sore throat
                  </div>
                </label>
                <input
                  id="checkbox_14"
                  type="checkbox"
                  value="1"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27 c28"
              >
                <label
                  class="c29 c30"
                  for="checkbox_15"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                    data-testid="checkbox-label"
                  >
                    Nausea
                  </div>
                </label>
                <input
                  id="checkbox_15"
                  type="checkbox"
                  value="2"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27 c28"
              >
                <label
                  class="c29 c30"
                  for="checkbox_16"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                    data-testid="checkbox-label"
                  >
                    Headache
                  </div>
                </label>
                <input
                  id="checkbox_16"
                  type="checkbox"
                  value="3"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c27 c28"
              >
                <label
                  class="c29 c30"
                  for="checkbox_17"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                    data-testid="checkbox-label"
                  >
                    Cough
                  </div>
                </label>
                <input
                  id="checkbox_17"
                  type="checkbox"
                  value="4"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c34"
      >
        <button
          class="c35"
          data-testid="survey-preview-prev"
          width="75"
        >
          Previous
        </button>
        <button
          class="c36"
          data-testid="survey-preview-next"
          disabled=""
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview should lifecycle 4`] = `
.c4 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c1 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c1:hover {
  cursor: pointer;
}

.c1 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c1 > div svg {
  margin-right: 0.25rem;
}

.c1 > div {
  color: #4475E3;
}

.c1 > div svg {
  fill: #4475E3;
}

.c1:hover:enabled > div {
  color: #2F65E0;
}

.c1:hover:enabled > div svg {
  fill: #2F65E0;
}

.c1:hover:enabled:active > div {
  color: #2057D5;
}

.c1:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c1:disabled > div {
  color: #B3C6F1;
}

.c1:disabled > div svg {
  fill: #B3C6F1;
}

.c1:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c1:focus-visible > div {
  color: #4475E3;
}

.c1:focus-visible > div svg {
  fill: #4475E3;
}

.c3 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c7 {
  position: relative;
  width: 100%;
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
}

.c11 {
  grid-area: right-icon;
}

.c8 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c9:hover {
  border-color: #2F65E0;
}

.c18 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c20 {
  width: calc(100% * 0.3333333333333333);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
}

.c30 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c33 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c32 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c34 {
  display: inline-block;
}

.c34 input {
  display: none;
}

.c34 .c31 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
}

.c34 .c31 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c34:hover > .c29 {
  cursor: pointer;
}

.c34:hover .c31 svg > :first-child {
  fill: #ECF1FC;
}

.c27 {
  display: inline-block;
}

.c27 input {
  display: none;
}

.c27 .c31 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #4475E3;
}

.c27 .c31 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c27:hover > .c29 {
  cursor: pointer;
}

.c28 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c28 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c28 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1.875rem;
}

.c24 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c25 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  height: 3.375rem;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c36:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c37 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c37:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c0 {
  min-width: 21.875rem;
  height: 100vh;
  padding: 3rem 0 6.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  background-color: #FFFFFF;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  opacity: 1;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  grid-area: preview;
}

.c2 {
  margin-left: 1.5rem;
}

.c2 > div svg {
  margin-right: 0.25rem;
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  margin-right: 1.125rem;
  white-space: nowrap;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.5rem 0 1.5rem;
  padding: 0 2.5rem;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  position: relative;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-height: 37.5rem;
  margin: 0 2.5rem;
  overflow: hidden;
}

.c13 {
  width: 22.5rem;
  height: 134%;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
}

.c14 {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 2rem 1.5rem 3.5rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.875rem;
}

.c15 svg {
  margin-right: 1rem;
}

.c16 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  left: 1.5rem;
  right: 1.5rem;
  bottom: 0;
  height: 4.6875rem;
  background: linear-gradient(180deg,rgba(255,255,255,0) 0%,#ffffff 50%);
}

<div
  class="c0"
  data-testid="survey-preview"
>
  <button
    class="c1 c2"
    data-testid="survey-preview-close"
    fill="text"
    style="overflow: hidden; position: relative;"
    width="164"
  >
    <div
      class="c3"
      data-testid="content"
    >
      <svg />
      Close Preview
    </div>
    <div
      class="c4"
      color="primaryLightPressed"
      opacity="1,1"
      scale="0"
      style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
    />
  </button>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      Switch to
    </div>
    <div
      class="c7"
    >
      <div
        class="c8 c9"
        data-testid="ValueItem"
      >
        <div
          class="c10"
        >
          Question 1
        </div>
        <svg
          class="c11"
        />
      </div>
    </div>
  </div>
  <div
    class="c12"
  >
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <div
          class="c15"
        >
          <svg />
          <div
            class="c16"
          >
            1 Survey placeholder for title maximum two lines
          </div>
        </div>
        <div
          class="c17"
          data-testid="survey-preview-screen"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              />
            </div>
            <div
              class="c21"
            >
              1 out of 3
            </div>
          </div>
          <div
            class="c22"
          >
            <div
              class="c23"
            >
              <div
                class="c24"
              >
                Did you experience nausea today?*
              </div>
              <div
                class="c25"
              />
            </div>
            <div
              class="c26"
            >
              <div
                class="c27  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="18"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    Yes
                  </div>
                </label>
                <input
                  checked=""
                  id="18"
                  type="checkbox"
                  value="0"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c34  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="19"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    No
                  </div>
                </label>
                <input
                  id="19"
                  type="checkbox"
                  value="1"
                />
              </div>
            </div>
            <div
              class="c26"
            >
              <div
                class="c34  c28"
                kind="mobile"
              >
                <label
                  class="c29 c30"
                  for="20"
                >
                  <div
                    class="c31 c32"
                  >
                    <svg />
                  </div>
                  <div
                    class="c33"
                  >
                    I dont remember
                  </div>
                </label>
                <input
                  id="20"
                  type="checkbox"
                  value="2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c35"
      >
        <button
          class="c36"
          data-testid="survey-preview-prev"
          disabled=""
          width="75"
        >
          Previous
        </button>
        <button
          class="c37"
          data-testid="survey-preview-next"
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
